--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "chalk": "^5.4.1",
-    "commander": "^13.1.0",
+    "commander": "^11.1.0",
+    "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.6.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.15.3",
     "jest": "^29.7.0",
