--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "commander": "^11.1.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
-    "inquirer": "^12.6.0"
+    "inquirer": "^12.6.0",
+    "update-notifier": "^7.3.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.15.3",
+    "@types/update-notifier": "^6.0.4",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
