--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "create-nodex",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "CLI tool to create modern Node.js projects with TypeScript and more",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
     "create-nodex": "./dist/index.js"
   },
+  "files": [
+    "dist",
+    "assets",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc && cp -R src/templates dist/",
+    "build": "tsc && cp -R src/templates dist/ && cp -R assets dist/",
     "dev": "nodemon src/index.ts",
     "prepublishOnly": "npm run build"
   },
