--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-nodex",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "CLI tool to create modern Node.js projects with TypeScript, AI capabilities, and more",
   "main": "dist/index.js",
   "type": "module",
@@ -9,12 +9,11 @@
   },
   "files": [
     "dist",
-    "assets",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc && cp -R src/templates dist/ && cp -R assets dist/",
+    "build": "tsc && cp -R src/templates dist/",
     "dev": "nodemon src/index.ts",
     "prepublishOnly": "npm run build"
   },
@@ -22,10 +21,43 @@
     "cli",
     "node",
     "typescript",
+    "javascript",
     "project",
     "generator",
     "template",
-    "boilerplate"
+    "boilerplate",
+    "scaffold",
+    "starter",
+    "ai",
+    "artificial-intelligence",
+    "llm",
+    "langchain",
+    "rag",
+    "retrieval-augmented-generation",
+    "vector-database",
+    "embeddings",
+    "pinecone",
+    "mongodb",
+    "faiss",
+    "pgvector",
+    "chroma",
+    "qdrant",
+    "openai",
+    "gpt",
+    "anthropic",
+    "claude",
+    "groq",
+    "mistralai",
+    "google-genai",
+    "gemini",
+    "google-vertexai",
+    "express",
+    "api",
+    "backend",
+    "fullstack",
+    "developer-tools",
+    "productivity",
+    "automation"
   ],
   "author": "RGDEV2022",
   "license": "MIT",
